--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/contato/contato.css">
+    <link rel="stylesheet" href="CSS/contato/contato_small.css">
     <link rel="stylesheet" href="CSS/contato/contato_medium.css">
     <link rel="stylesheet" href="CSS/contato/contato_large.css">
     <link rel="stylesheet" href="CSS/contato/contato_extra_large.css">
@@ -55,7 +56,12 @@
                 <img src="./Assets/Icons/contato.svg" alt="Ícone de Telefone simbolizando a página de contato">
             </div>
         </header>
-
+        <div id="telefone-navbar-sel" class="telefone-navbar-selector">
+            <div onclick="navbar_toggle()" class="telefone-navbar-wrapper">
+                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="">
+                Menu
+            </div>
+        </div>
         <main>
             <section id="informacoes-contato-hc">
                 <div id="esquerda-informacoes-contato-hc">
