--- a/quem_somos.html
+++ b/quem_somos.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos.css">
+    <link rel="stylesheet" href="CSS/quem_somos/quem_somos_small.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_medium.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_large.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_extra_large.css">
@@ -56,6 +57,12 @@
                     alt="Ícone com três pessoas, simbolizando os três autores do website.">
             </div>
         </header>
+        <div id="telefone-navbar-sel" class="telefone-navbar-selector">
+            <div onclick="navbar_toggle()" class="telefone-navbar-wrapper">
+                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="">
+                Menu
+            </div>
+        </div>
         <main>
             <div class="card-integrante">
                 <div class="foto-integrante">
