--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/faq/faq.css">
+    <link rel="stylesheet" href="CSS/faq/faq_small.css">
     <link rel="stylesheet" href="CSS/faq/faq_medium.css">
     <link rel="stylesheet" href="CSS/faq/faq_large.css">
     <link rel="stylesheet" href="CSS/faq/faq_extra_large.css">
@@ -56,6 +57,12 @@
                     alt="Ícone com três pessoas, simbolizando os três autores do website.">
             </div>
         </header>
+        <div id="telefone-navbar-sel" class="telefone-navbar-selector">
+            <div onclick="navbar_toggle()" class="telefone-navbar-wrapper">
+                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="">
+                Menu
+            </div>
+        </div>
         <main>
             <div class="pergunta-frequente">
                 <div class="titulo-pergunta-frequente">
