--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/index/index.css">
+    <link rel="stylesheet" href="CSS/index/index_small.css">
     <link rel="stylesheet" href="CSS/index/index_medium.css">
     <link rel="stylesheet" href="CSS/index/index_large.css">
     <link rel="stylesheet" href="CSS/index/index_extra_large.css">
@@ -55,6 +56,12 @@
                 <img src="./Assets/Icons/home_icon.svg" alt="Ícone de Casa simbolizando a home page">
             </div>
         </header>
+        <div id="telefone-navbar-sel" class="telefone-navbar-selector">
+            <div onclick="navbar_toggle()" class="telefone-navbar-wrapper">
+                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="">
+                Menu
+            </div>
+        </div>
         <main>
             <section class="titulo-home-page">
                 <h2>O cuidado que você merece</h2>
