Feat: Responsividade EXTRA SMALL para TODAS as páginas.

--- a/agendamentos.html
+++ b/agendamentos.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos.css">
+    <link rel="stylesheet" href="CSS/agendamentos/agendamentos_extra_small.css">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos_small.css">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos_medium.css">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos_large.css">
