--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/contato/contato.css">
+    <link rel="stylesheet" href="CSS/contato/contato_extra_small.css">
     <link rel="stylesheet" href="CSS/contato/contato_small.css">
     <link rel="stylesheet" href="CSS/contato/contato_medium.css">
     <link rel="stylesheet" href="CSS/contato/contato_large.css">
