--- a/quem_somos.html
+++ b/quem_somos.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos.css">
+    <link rel="stylesheet" href="CSS/quem_somos/quem_somos_extra_small.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_small.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_medium.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_large.css">
