--- a/prescricoes.html
+++ b/prescricoes.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/prescricoes/prescricoes.css">
+    <link rel="stylesheet" href="CSS/prescricoes/prescricoes_extra_small.css">
     <link rel="stylesheet" href="CSS/prescricoes/prescricoes_small.css">
     <link rel="stylesheet" href="CSS/prescricoes/prescricoes_medium.css">
     <link rel="stylesheet" href="CSS/prescricoes/prescricoes_large.css">
