Feat: Icons em todas as páginas e um pequeno Fix: no padding dos headers.

--- a/exames.html
+++ b/exames.html
@@ -7,6 +7,7 @@
     <title>Guia de Exames</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/exames/exames.css">
     <link rel="stylesheet" href="CSS/exames/exames_extra_small.css">
     <link rel="stylesheet" href="CSS/exames/exames_small.css">
