--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home Page – Guias de Acesso</title>
     <meta name="description" content="">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/index/index.css">
     <link rel="stylesheet" href="CSS/index/index_extra_small.css">
