--- a/agendamentos.html
+++ b/agendamentos.html
@@ -7,6 +7,7 @@
     <title>Guia de Agendamentos</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos.css">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos_extra_small.css">
     <link rel="stylesheet" href="CSS/agendamentos/agendamentos_small.css">
