--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
     <title>Contato</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/contato/contato.css">
     <link rel="stylesheet" href="CSS/contato/contato_extra_small.css">
     <link rel="stylesheet" href="CSS/contato/contato_small.css">
