--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
     <title>Perguntas Frequentes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/faq/faq.css">
     <link rel="stylesheet" href="CSS/faq/faq_extra_small.css">
     <link rel="stylesheet" href="CSS/faq/faq_small.css">
