--- a/prescricoes.html
+++ b/prescricoes.html
@@ -7,6 +7,7 @@
     <title>Guia de Prescrições</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/prescricoes/prescricoes.css">
     <link rel="stylesheet" href="CSS/prescricoes/prescricoes_extra_small.css">
     <link rel="stylesheet" href="CSS/prescricoes/prescricoes_small.css">
