--- a/quem_somos.html
+++ b/quem_somos.html
@@ -7,6 +7,7 @@
     <title>Quem Somos</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_extra_small.css">
     <link rel="stylesheet" href="CSS/quem_somos/quem_somos_small.css">
