--- a/registro_paciente.html
+++ b/registro_paciente.html
@@ -7,6 +7,7 @@
     <title>Guia de Registro de Paciente</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="Assets/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente.css">
     <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente_extra_small.css">
     <link rel="stylesheet" href="CSS/registro_paciente/registro_paciente_small.css">
