Chore: Todos os ALTS de todas as imagens foram escritos.

--- a/agendamentos.html
+++ b/agendamentos.html
@@ -27,28 +27,29 @@
                 <a href="index.html">
                     <li>
                         Home
-                        <img src="Assets/Icons/home_icon.svg" alt="">
+                        <img src="Assets/Icons/home_icon.svg" alt="Ícone de uma pequena casa, com a cor azul.">
                     </li>
                 </a>
                 <a href="faq.html">
                     <li>
                         FAQ
-                        <img src="Assets/Icons/faq_icon.svg" alt="">
+                        <img src="Assets/Icons/faq_icon.svg"
+                            alt="Ícone de uma pequena caixa de pergunta, com a cor azul.">
                     </li>
                 </a>
                 <a href="contato.html">
                     <li>
                         Contato
-                        <img src="Assets/Icons/contato.svg" alt="">
+                        <img src="Assets/Icons/contato.svg" alt="Ícone de um pequeno telefone, com a cor azul.">
                     </li>
                 </a>
                 <a href="quem_somos.html">
                     <li>
                         Quem somos
-                        <img src="Assets/Icons/quem_somos_icon.svg" alt="">
+                        <img src="Assets/Icons/quem_somos_icon.svg" alt="Ícone de pequenas pessoas, com a cor azul.">
                     </li>
                 </a>
-                </ol>
+            </ul>
         </div>
     </nav>
     <div id="estrutura-pagina-menu-selector" class="estrutura-pagina-menu">
@@ -61,7 +62,7 @@
         </header>
         <div id="telefone-navbar-sel" class="telefone-navbar-selector">
             <div onclick="navbar_toggle()" class="telefone-navbar-wrapper">
-                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="">
+                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="Ícone de uma pequeno menu hambúrguer, com a cor branca.">
                 Menu
             </div>
         </div>
@@ -73,7 +74,7 @@
                         paciente</a>
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-1">
-                    <img draggable="false" class="etapas-imagens-figure" id="etapa-1-agendamento-imagem" src="./Assets/Guias/Agendamentos/etapa_1.png" alt="">
+                    <img draggable="false" class="etapas-imagens-figure" id="etapa-1-agendamento-imagem" src="./Assets/Guias/Agendamentos/etapa_1.png" alt="Imagem que mostra a página principal do painel do paciente no site do Portal das Clínicas.">
                     <figcaption class="etapa-paragrafo">Acesse a aba <span>“Minha Agenda”</span>, no <a target="_blank"
                             href="https://portaldopaciente.hc.fm.usp.br/">portal do paciente</a> do Hospital das
                         Clínicas.</figcaption>
@@ -92,7 +93,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/etapa_2.png" alt="">
+                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/etapa_2.png" alt="Imagem que mostra a forma como um agendamento apareceria na tela do usuário.">
                     <figcaption class="etapa-paragrafo">Nessa aba, os agendamentos feitos aparecerão listados. Estará
                         informado no agendamento o <span>tipo</span>, a <span>data/hora</span>, o <span>instituto</span>
                         onde será realizado e a <span>especialidade</span> do mesmo.</figcaption>
@@ -112,7 +113,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-3">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/adendo_1.png" alt="">
+                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/adendo_1.png" alt="Imagem que mostra o documento da filipeta, com informações sobre o agendamento, por exemplo: tipo de agendamento.">
                     <figcaption class="etapa-paragrafo">Ao clicar em <span>“Filipeta”</span>, uma aba de
                         <span>visualização do agendamento</span> será aberta, com algumas informações que podem vir a
                         ser importantes dependendo do <span>tipo de agendamento</span>. <span>Leia bem o
@@ -135,7 +136,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-3">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/adendo_2.png" alt="">
+                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/adendo_2.png" alt="Imagem que mostra os ícones e os tipos de agendamentos possíveis de aparecer.">
                     <figcaption class="etapa-paragrafo">Agendamentos aparecerão com um desses <span>quatro
                             ícones</span>, indicando o <span>tipo do agendamento</span>. São apenas indicações para que
                         o paciente tenha ciência de como deve se <span>preparar</span> para o evento.</figcaption>
