--- a/contato.html
+++ b/contato.html
@@ -27,28 +27,29 @@
                 <a href="index.html">
                     <li>
                         Home
-                        <img src="Assets/Icons/home_icon.svg" alt="">
+                        <img src="Assets/Icons/home_icon.svg" alt="Ícone de uma pequena casa, com a cor azul.">
                     </li>
                 </a>
                 <a href="faq.html">
                     <li>
                         FAQ
-                        <img src="Assets/Icons/faq_icon.svg" alt="">
+                        <img src="Assets/Icons/faq_icon.svg"
+                            alt="Ícone de uma pequena caixa de pergunta, com a cor azul.">
                     </li>
                 </a>
                 <a href="contato.html">
                     <li>
                         Contato
-                        <img src="Assets/Icons/contato.svg" alt="">
+                        <img src="Assets/Icons/contato.svg" alt="Ícone de um pequeno telefone, com a cor azul.">
                     </li>
                 </a>
                 <a href="quem_somos.html">
                     <li>
                         Quem somos
-                        <img src="Assets/Icons/quem_somos_icon.svg" alt="">
+                        <img src="Assets/Icons/quem_somos_icon.svg" alt="Ícone de pequenas pessoas, com a cor azul.">
                     </li>
                 </a>
-                </ol>
+            </ul>
         </div>
     </nav>
     <div id="estrutura-pagina-menu-selector" class="estrutura-pagina-menu">
@@ -60,7 +61,7 @@
         </header>
         <div id="telefone-navbar-sel" class="telefone-navbar-selector">
             <div onclick="navbar_toggle()" class="telefone-navbar-wrapper">
-                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="">
+                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="Ícone de uma pequeno menu hambúrguer, com a cor branca.">
                 Menu
             </div>
         </div>
