--- a/exames.html
+++ b/exames.html
@@ -27,28 +27,29 @@
                 <a href="index.html">
                     <li>
                         Home
-                        <img src="Assets/Icons/home_icon.svg" alt="">
+                        <img src="Assets/Icons/home_icon.svg" alt="Ícone de uma pequena casa, com a cor azul.">
                     </li>
                 </a>
                 <a href="faq.html">
                     <li>
                         FAQ
-                        <img src="Assets/Icons/faq_icon.svg" alt="">
+                        <img src="Assets/Icons/faq_icon.svg"
+                            alt="Ícone de uma pequena caixa de pergunta, com a cor azul.">
                     </li>
                 </a>
                 <a href="contato.html">
                     <li>
                         Contato
-                        <img src="Assets/Icons/contato.svg" alt="">
+                        <img src="Assets/Icons/contato.svg" alt="Ícone de um pequeno telefone, com a cor azul.">
                     </li>
                 </a>
                 <a href="quem_somos.html">
                     <li>
                         Quem somos
-                        <img src="Assets/Icons/quem_somos_icon.svg" alt="">
+                        <img src="Assets/Icons/quem_somos_icon.svg" alt="Ícone de pequenas pessoas, com a cor azul.">
                     </li>
                 </a>
-                </ol>
+            </ul>
         </div>
     </nav>
     <div id="estrutura-pagina-menu-selector" class="estrutura-pagina-menu">
@@ -61,7 +62,7 @@
         </header>
         <div id="telefone-navbar-sel" class="telefone-navbar-selector">
             <div onclick="navbar_toggle()" class="telefone-navbar-wrapper">
-                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="">
+                <img src="Assets/Icons/menu_hamburger_icon.svg" alt="Ícone de uma pequeno menu hambúrguer, com a cor branca.">
                 Menu
             </div>
         </div>
@@ -73,7 +74,7 @@
                         paciente</a>
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-1">
-                    <img draggable="false" id="etapa-1-exames-imagem" class="etapas-imagens-figure" src="../Assets/Guias/Exames/etapa_1.png" alt="">
+                    <img draggable="false" id="etapa-1-exames-imagem" class="etapas-imagens-figure" src="../Assets/Guias/Exames/etapa_1.png" alt="Imagem que mostra a página principal do painel do paciente no site do Portal das Clínicas.">
                     <figcaption class="etapa-paragrafo">Acesse a aba <span>“Meus Resultados"</span>, no <a
                             target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">portal do paciente</a> do
                         Hospital das Clínicas.</figcaption>
@@ -92,7 +93,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Exames/etapa_2.png" alt="">
+                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Exames/etapa_2.png" alt="Imagem que mostra a forma como o resultado de um exame apareceria na tela do usuário.">
                     <figcaption class="etapa-paragrafo">Nessa aba, aparecerão os <span>resultados</span> de todos os
                         seus exames, eles poderão ser <span>impressos</span> ou <span>salvos</span> como um arquivo pdf.
                     </figcaption>
@@ -112,7 +113,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Exames/adendo_1.png" alt="">
+                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Exames/adendo_1.png" alt="Imagem que mostra os ícones e os tipos de resultaods de exames possíveis de aparecer.">
                     <figcaption class="etapa-paragrafo"><span>Exames</span> aparecerão com uma dessas duas imagens,
                         <span>classificando-os</span> como <span>exames de imagem</span> e <span>exames
                             laboratoriais</span>. São apenas <span>indicações visuais</span> e não alteram em nada o
