Fix: Source de algumas imagens dos guias estavam errados.

--- a/agendamentos.html
+++ b/agendamentos.html
@@ -93,7 +93,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/etapa_2.png" alt="Imagem que mostra a forma como um agendamento apareceria na tela do usuário.">
+                    <img draggable="false" class="etapa-pequena-imagem" src="./Assets/Guias/Agendamentos/etapa_2.png" alt="Imagem que mostra a forma como um agendamento apareceria na tela do usuário.">
                     <figcaption class="etapa-paragrafo">Nessa aba, os agendamentos feitos aparecerão listados. Estará
                         informado no agendamento o <span>tipo</span>, a <span>data/hora</span>, o <span>instituto</span>
                         onde será realizado e a <span>especialidade</span> do mesmo.</figcaption>
@@ -113,7 +113,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-3">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/adendo_1.png" alt="Imagem que mostra o documento da filipeta, com informações sobre o agendamento, por exemplo: tipo de agendamento.">
+                    <img draggable="false" class="etapa-pequena-imagem" src="./Assets/Guias/Agendamentos/adendo_1.png" alt="Imagem que mostra o documento da filipeta, com informações sobre o agendamento, por exemplo: tipo de agendamento.">
                     <figcaption class="etapa-paragrafo">Ao clicar em <span>“Filipeta”</span>, uma aba de
                         <span>visualização do agendamento</span> será aberta, com algumas informações que podem vir a
                         ser importantes dependendo do <span>tipo de agendamento</span>. <span>Leia bem o
@@ -136,7 +136,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-3">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Agendamentos/adendo_2.png" alt="Imagem que mostra os ícones e os tipos de agendamentos possíveis de aparecer.">
+                    <img draggable="false" class="etapa-pequena-imagem" src="./Assets/Guias/Agendamentos/adendo_2.png" alt="Imagem que mostra os ícones e os tipos de agendamentos possíveis de aparecer.">
                     <figcaption class="etapa-paragrafo">Agendamentos aparecerão com um desses <span>quatro
                             ícones</span>, indicando o <span>tipo do agendamento</span>. São apenas indicações para que
                         o paciente tenha ciência de como deve se <span>preparar</span> para o evento.</figcaption>
