--- a/exames.html
+++ b/exames.html
@@ -93,7 +93,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Exames/etapa_2.png" alt="Imagem que mostra a forma como o resultado de um exame apareceria na tela do usuário.">
+                    <img draggable="false" class="etapa-pequena-imagem" src="./Assets/Guias/Exames/etapa_2.png" alt="Imagem que mostra a forma como o resultado de um exame apareceria na tela do usuário.">
                     <figcaption class="etapa-paragrafo">Nessa aba, aparecerão os <span>resultados</span> de todos os
                         seus exames, eles poderão ser <span>impressos</span> ou <span>salvos</span> como um arquivo pdf.
                     </figcaption>
@@ -113,7 +113,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Exames/adendo_1.png" alt="Imagem que mostra os ícones e os tipos de resultaods de exames possíveis de aparecer.">
+                    <img draggable="false" class="etapa-pequena-imagem" src="./Assets/Guias/Exames/adendo_1.png" alt="Imagem que mostra os ícones e os tipos de resultaods de exames possíveis de aparecer.">
                     <figcaption class="etapa-paragrafo"><span>Exames</span> aparecerão com uma dessas duas imagens,
                         <span>classificando-os</span> como <span>exames de imagem</span> e <span>exames
                             laboratoriais</span>. São apenas <span>indicações visuais</span> e não alteram em nada o
