--- a/prescricoes.html
+++ b/prescricoes.html
@@ -93,7 +93,7 @@
                     <!-- <a target="_blank" href="https://portaldopaciente.hc.fm.usp.br/">Clique aqui para abrir o portal do paciente</a> -->
                 </div>
                 <figure class="etapa-imagem" id="etapa-imagem-2">
-                    <img draggable="false" class="etapa-pequena-imagem" src="../Assets/Guias/Prescricoes/etapa_2.png" alt="Imagem que mostra a forma como uma prescrição apareceria na tela do usuário.">
+                    <img draggable="false" class="etapa-pequena-imagem" src="./Assets/Guias/Prescricoes/etapa_2.png" alt="Imagem que mostra a forma como uma prescrição apareceria na tela do usuário.">
                     <figcaption class="etapa-paragrafo">Nessa aba, as <span>prescrições receitadas</span> por médicos
                         aparecerão por <span>ordem decrescente de vencimento</span>. É possível <span>imprimir</span> ou
                         <span>salvar</span> em pdf as receitas, clicando em <span>“Visualizar”</span></figcaption>
